# gpu-openfhe

./: .gitignore
hip_kernels/: CMakeLists.txt  gpu_functions.h  gpu_functions.hip  test_gpu_kernels.hip
hip_kernels/include/: debugger.hpp  functions.hpp  ntt_class.hpp
hip_kernels/src/: debugger.hip  functions.hip  gpu_functions.hip  main.hip.c
new_openfhe/: .gitignore  CMakeLists.txt
new_openfhe/src/core/: CMakeLists.txt
new_openfhe/src/core/include/lattice/hal/default/: dcrtpoly.h  poly.h
new_openfhe/src/core/include/math/hal/intnat/: mubintvecnat.h
new_openfhe/src/core/lib/math/hal/intnat/: mubintvecnat.cpp
new_openfhe/src/pke/: CMakeLists.txt
new_openfhe/src/pke/examples/: benchFuncs.cpp  simple-real-numbers.cpp  test-NTT.cpp  test-add.cpp  test-empty.cpp  test-ind-functs.cpp  test-independent.cpp  test-mult.cpp  test-scale.cpp
new_openfhe/src/pke/include/: ciphertext.h  rawciphertext.h
